# Mawaqit

./: .env.example  .gitignore  README.md  db_test.py  pyproject.toml
docs/: altered_schema.sql  altered_schmea_erd.mwb  altered_schmea_erd.mwb.bak  apis.md  schema.sql
scripts/: create_admin.py  create_article_videos.py  create_category.py  create_sub_category.py
src/example/: main.py
src/mawaqit/: config.py  database.py  main.py
src/mawaqit/api/: deps.py  main.py
src/mawaqit/api/admin/: router.py
src/mawaqit/api/article_videos/: __init__.py  router.py
src/mawaqit/api/category/: __init__.py  router.py
src/mawaqit/api/subcategory/: __init__.py  router.py
src/mawaqit/api/surah/: __init__.py  router.py
src/mawaqit/models/: __init__.py  admin.py  article_videos.py  category.py  subcategory.py  surah.py
src/mawaqit/repositories/: admin.py  article_videos.py  category.py  subcategory.py  surah.py
src/mawaqit/schemas/: admin.py  article_videos.py  category.py  subcategory.py  surah.py
src/mawaqit/services/: admin.py  article_videos.py  category.py  subcategory.py  surah.py
