[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mawaqit"
version = "0.1.0"
description = "Mawaqit - Islamic Prayer Times & Quran API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core FastAPI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiomysql>=0.2.0",          # Async MySQL driver
    
    # Config & Validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]>=2.7",     # Email validation
    
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",  # Form data for login
    
    # External APIs
    "httpx>=0.27",
    
    # Utilities
    "python-dotenv>=1.0",
    "hijri-converter>=2.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "black>=24.3",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
addopts = "--cov=mawaqit --cov=adhanpy"
testpaths = ["tests", "src/adhanpy/tests"]

[tool.mypy]
show_error_codes = true
python_version = "3.9"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["I", "UP", "C4", "C90"]

[tool.black]
line-length = 100
target-version = ["py39"]